# talktype

./: .gitignore  LICENSE  README.md  chunking.py  generate_sounds.py  pyproject.toml  requirements.txt  test_chunking.py  voice_type.py
.github/workflows/: test.yml
talktype/: main.py  mouse_hook.py
