[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talktype"
version = "0.1.0"
description = "Push-to-talk transcription. Hold a key, speak, release — text appears at your cursor."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "sounddevice",
    "openai",
    "keyboard",
    "numpy",
]

[project.scripts]
talktype = "talktype.main:main"

[tool.setuptools.packages.find]
include = ["talktype*"]

[tool.setuptools.package-data]
talktype = ["sounds/*.wav"]
